# sc-server-auth

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  README.md  admin.py  auth.py  common.py  config.py  constants.py  database.db  database.py  database_default_insert.sql  main.py  models.py  pyproject.toml  requirements.txt  run_server.sh  server_tests.py  verifiers.py
.github/workflows/: message_checker.yaml  push_ci.yaml  release.yaml
docs/: changelog.md
json_client/: client.py  sc_agent.py  sc_module.py
json_client/constants/: exceptions.py  numeric.py  sc_types.py
sc-server-auth/: config.py  database.db  log.py  main.py
sc-server-auth/json_client/: README.md  client.py  dataclass.py  kb_tests.py  sc_keynodes.py
sc-server-auth/json_client/constants/: common.py  exceptions.py
sc-server-auth/scripts/: local_ci.sh  run_server.sh
sc-server-auth/server/: admin.py  auth.py  common.py  constants.py  database.py  models.py  server_tests.py  user_manager.py  verifiers.py
sc-server-auth/tests/: common.py  tokens_tests.py  user_tests.py
sc_server_auth/: __main__.py  config.py  create_admin.py  database.db  log.py  main.py
sc_server_auth/configs/: constants.py  log.py  models.py  params.py  parser.py  paths.py  settings.toml
sc_server_auth/server/: admin.py  auth.py  common.py  constants.py  database.py  engines.py  hashing.py  keys.py  models.py  verifiers.py
sc_server_auth/tests/: common.py  tokens_tests.py  user_tests.py
scripts/: local_ci.sh  run_server.sh  sort_imports.sh
